# template-builder

./: .gitignore  Error_1515.sql  README.md  pyproject.toml
docs/: cache_config.toml  config.toml  stencil_app_config.toml
src/: __init__.py
src/docs/: cache_config.toml  stencil_app_config.toml
src/models/py_models/: _app_model.py  bland_template.py  new_py_model_template.py  sproc_template.py
src/models/templates/: new_py_model_template.py.jinja2
src/project_models/py_models/: _app_model.py  _delayed_change_model.py  bland_template.py  new_py_model_template.py  sproc_template.py
src/project_models/templates/: bland_template.txt.jinja2  new_py_model_template.py.jinja2
src/sproc_build/: main.py
src/sproc_build/builders/: project_dirs.py  sproc_builder.py
src/sproc_build/logic_files/: logger.py  project_dirs.py  sproc_builder.py
src/sproc_build/models/: sproc_config.py
src/template_build/: main.py
src/template_build/logic_files/: project_dirs.py  template_builder.py
src/template_build/models/: _app_model.py  bland_template.py  builder_config_base.py  sproc_template.py
src/template_builder/: __init__.py  main.py
src/template_builder/cli/: __init__.py  cli.py
src/template_builder/logic_files/: build_file.py  config_manip.py  init_scripts.py  logger.py  model_config.py  model_manager.py  project_dirs.py  template_builder.py
src/templates/: _meta_template.py.jinja2  bland_template.txt.jinja2  sproc_template.sql
tests/: test_build_file.py  test_project_dirs.py  test_sproc_build.py  test_template_build.py
(+4 files in other folders)
