[tool.poetry]
name = "sproc_build"
version = "0.1.0"
description = ""
authors = ["Terry Dullaghan <t.ma.dullaghan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
tomlkit = "^0.11.4"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
